--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
     bottom: 50px;
     right: 30px;
     padding: 10px 15px;
-    background-color: #B59595;
+    background-color: #B9ABAB;
     color: #fff;
     border: none;
     cursor: pointer;
