--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     bottom: 50px;
     right: 30px;
     padding: 8px 10px;
-    background-color: #B9ABAB;
+    background-color: rgba(0,0,0,0.18);
     color: #fff;
     border: none;
     cursor: pointer;
