--- a/css/styles.css
+++ b/css/styles.css
@@ -119,9 +119,39 @@ body {
     position: fixed;
     bottom: 0;
     width: 100%;
-    font-size: 14px; /* 字体大小 */
-    color: #FFFFFF; /* 文本颜色 */
 }
+
+.footer-menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menu-list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+}
+
+.menu-list li {
+    margin-right: 20px;
+}
+
+.menu-list li:last-child {
+    margin-right: 0;
+}
+
+.menu-list a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    transition: color 0.3s;
+}
+
+.menu-list a:hover {
+    color: #ff9800; /* 鼠标悬停时的颜色 */
+}
+
 
 /* 媒体查询：电脑 */
 @media screen and (min-width: 1024px) {
