--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+	
 }
 
 .navbar {
@@ -43,6 +44,7 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     background-color: #333; /* 导航栏背景颜色 */
+	
 }
 
 .logo img {
@@ -53,6 +55,7 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
+	padding-left: 30px; /* 往右偏移 10px */
 }
 
 .nav-links li {
@@ -82,7 +85,7 @@ body {
         align-items: flex-start;
         background-color: #444;
         position: absolute;
-        top: 60px;
+        top: 75px;
         left: 0;
         width: 100%;
     }
@@ -108,7 +111,7 @@ body {
         align-items: flex-start;
         background-color: #444;
         position: absolute;
-        top: 60px;
+        top: 75px;
         left: 0;
         width: 100%;
     }
