--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,18 @@ body {
     background-color: #333; /* 导航栏背景颜色 */
 	
 }
-
+.logo {
+    display: flex;
+    align-items: center;
+}
 .logo img {
     max-width: 80%;
     height: auto;
 }
-
+.logo-text {
+     font-weight: bold;
+    margin-left: 10px;
+}
 .nav-links {
     list-style: none;
     display: flex;
