--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,19 @@ body {
     border: none;
     cursor: pointer;
 }
-
+/* 导航字体链接 */
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+}
 /* 头部样式 */
 .header {
     background-color: #333;
@@ -63,7 +75,7 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
-    padding-left: 30px; /* 往右偏移 10px */
+    padding-left: 30%; /* 往右偏移 10px */
 }
 
 .nav-links li {
@@ -90,7 +102,7 @@ body {
         display: none;
         flex-direction: column;
         align-items: flex-start;
-        background-color: #444;
+        background-color: #333;
         position: absolute;
         top: 75px;
         left: 0;
