--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
     bottom: 50px;
     right: 30px;
     padding: 8px 10px;
-    background-color: rgba(0, 0, 0, 0.18);
+    background-color: rgba(143,195,53,0.45);
     color: #fff;
     border: none;
     cursor: pointer;
