--- a/css/styless.css
+++ b/css/styless.css
@@ -1,9 +1,8 @@
-
 /* 设置隐藏面板样式，初始状态为不显示 */
 #panel {
   font-size: 14px; /* 添加字体大小 */
   width: 150px;
-  height: 200px;
+  height: 250px;
   background-color: #f0f0f0;
   display: none;
   padding: 20px;
@@ -22,10 +21,28 @@
     padding: 0px 0px; /* 添加内边距 */
     border: none; /* 去掉边框 */
     cursor: pointer; /* 鼠标悬停时显示指针 */
-    width: 20px;
+    width: 15px;
     height: 50px;
     position: fixed; /* 使用 fixed 定位 */
     top: 400px; /* 距顶部 400px */
     right: 0; /* 靠右边缘 */
     transform: translate(0, -50%); /* 使用平移来垂直居中 */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+/* 在这里替换成您想要的选择器，比如 .apple-text */
+.apple-text {
+  font-size: 13px;
+  color: #299318; /* 苹果色的颜色代码 */
+}
+/* 样式为链接 */
+a {
+  text-decoration: none; /* 去掉下划线 */
+  transition: transform 0.2s; /* 添加过渡效果 */
+  font-size: 14px;
+}
+
+/* 鼠标经过链接时的样式 */
+a:hover {
+    transform: scale(1.03);
 }
