--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
+/* 重置部分默认样式 */
+body, h1, p, ul, li {
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    font-family: "微软雅黑", sans-serif;
+    color: #333; /* 文本颜色 */
+}
 #backToTopBtn {
     position: fixed;
     bottom: 50px;
