--- a/css/styles.css
+++ b/css/styles.css
@@ -251,13 +251,13 @@ h1, h2, h3 {
 
 /* 首页横幅样式 */
 #banner {
-    background: linear-gradient(135deg, #ff6600, #ff3366);
-    padding: 80px 20px;
-    text-align: center;
-    color: white;
-    border-radius: 15px;
-    margin-bottom: 50px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+	background: linear-gradient(135deg, #2cff0026, #ff33e978);
+	padding: 80px 20px;
+	text-align: center;
+	color: #6b5c9fe5;
+	border-radius: 15px;
+	margin-bottom: 50px;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 #banner h1 {
