--- a/css/styles.css
+++ b/css/styles.css
@@ -259,12 +259,22 @@ h1, h3 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
-#about-us h2 {
+
+#about-us h1, #about-us h2 {
     text-align: center;
-    margin-bottom: 20px;
-    font-size: 2.2em;
     color: #ff6600;
 }
+
+#about-us h1 {
+    margin-bottom: 30px;  /* Adjust as needed */
+    font-size: 3em;       /* Adjust the font size for h1 */
+}
+
+#about-us h2 {
+    margin-bottom: 20px;  /* Adjust as needed */
+    font-size: 2.2em;     /* Adjust the font size for h2 */
+}
+
 
 #about-us p {
     font-size: 1.2em;
