--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
     bottom: 50px;
     right: 30px;
     padding: 8px 10px;
-    background-color: rgb(143 195 53 / 0%)
-    color: #fff;
+    /*background-color: rgb(143 195 53 / 0%)
+     color: #fff;*/
     border: none;
     cursor: pointer;
 }
