--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,17 @@
     bottom: 50px;
     right: 30px;
     padding: 8px 10px;
-    background-color: rgb(143 195 53 / 0%);
+    background-color: rgba(143, 195, 53, 0); /* 设置完全透明的背景 */
     color: #fff;
     border: none;
     cursor: pointer;
+    transition: transform 0.3s ease; /* 添加过渡效果 */
 }
+
+#backToTopBtn:hover {
+    transform: scale(1.2); /* 鼠标悬停时放大按钮 */
+}
+
 /* 导航字体链接 */
 .dropdown-item {
   display: block;
